--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-#Definicao do endpoint - Colocar sempre o fqn ou usar o config key no service -> @RegisterRestClient(configKey = "bitcoin-api")
+#Definicao do endpoint - Colocar sempre o fqn ou usar o config key no service
+#       -> @RegisterRestClient(configKey = "bitcoin-api")
+
+#usando fqn
 #br.com.claudiowork.service.BitcoinService/mp-rest/url=https://alura-bitcoin.herokuapp.com
+
+#usando config key
 bitcoin-api/mp-rest/url=https://alura-bitcoin.herokuapp.com
+
 #Definicao do escopo - Toda vez que tiver uma requisição é criada uma nova instância
 bitcoin-api/mp-rest/scope=javax.enterprise.context.RequestScoped
