--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ bitcoin-api/mp-rest/url=https://alura-bitcoin.herokuapp.com
 
 #Definicao do escopo - Toda vez que tiver uma requisição é criada uma nova instância
 bitcoin-api/mp-rest/scope=javax.enterprise.context.RequestScoped
+
+#quarkus
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=root
+quarkus.datasource.password=root
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/bitcoin?autoReconnect=true
+quarkus.datasource.users.min-size=0
+quarkus.datasource.users.max-size=10
