--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,13 @@
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
-      <version>3.0.0-M5</version>
+      <version>[3.0.0-M5,)</version>
       <type>maven-plugin</type>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-failsafe-plugin</artifactId>
-      <version>3.0.0-M5</version>
+      <version>[3.0.0-M5,)</version>
       <type>maven-plugin</type>
     </dependency>
     <dependency>
@@ -88,6 +88,14 @@
       <artifactId>maven-compiler-plugin</artifactId>
       <version>${compiler-plugin.version}</version>
       <type>maven-plugin</type>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-security-jpa</artifactId>
     </dependency>
   </dependencies>
   <build>
